# Moviedata_rag_search_engine

./: .env  .gitignore  README.md  pyproject.toml
backend/: Dockerfile  ENDPOINTS.md
backend/app/: main.py
backend/app/models/: schemas.py
backend/app/routers/: search.py
backend/app/services/: engine.py  response_builder.py
cli/: augmented_generation_cli.py  evaluation_cli.py  hybrid_search_cli.py  keyword_search_cli.py  semantic_search_cli.py  test_gemini.py
cli/lib/: evaluation.py  hybrid_search.py  keyword_search.py  llm.py  rag.py  rerank.py  search_utils.py  semantic_search.py
cli/lib/prompts/: answer_question.md  batch_rerank.md  cited_summarize.md  expand.md  individual_rerank.md  llm_evaluation.md  question_ans_summary.md  rewrite.md  spelling.md  summarize.md
frontend/: package.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/shared/: LoadingDots.tsx  ResultCard.tsx  ScoreBar.tsx  SearchBox.tsx  TimingBadge.tsx
frontend/components/timeline/: ChapterCard.tsx  TimelineNav.tsx
frontend/components/timeline/chapters/: Bm25Chapter.tsx  ChunkedChapter.tsx  DocSemanticChapter.tsx  LegacyChapter.tsx  RagChapter.tsx  RerankChapter.tsx  RrfChapter.tsx  WeightedChapter.tsx
frontend/hooks/: useSearch.ts
frontend/lib/: api.ts  types.ts
