[project]
name = "rag-search-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "google-genai>=1.67.0",
    "nltk==3.9.1",
    "numpy>=2.4.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.9",
    "sentence-transformers>=5.2.3",
    "uvicorn[standard]>=0.34.0",
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
